# bbg-telegram-media-server

./: .gitignore  .gitmodules  Dockerfile  Makefile  PKGBUILD  README.md  bbg-telegram-media-server.py  bbg-telegram-media-server.service  build.sh  create_deb.sh  dockcross-linux-armv7a-lts  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.githooks/: lint.sh  pre-commit
.github/workflows/: main.yml
application/: Makefile  bbg-telegram-media-server  bbg-telegram-media-server-build.py  bbg-telegram-media-server.py  bbg-telegram-media-server.service  bbg_telegram_media_server.py  config.py  db_utils.py  handlers.py
application/src/: bbg_telegram_media_server.py  db_utils.py  global_variable.py  handlers.py  sqlite_utils.py  utils.py
bbg_telegram_media_server/: config.py  db_utils.py  handlers.py  main.py  utils.py
src/: bbg-telegram-media-server.conf  bbg-telegram-media-server.service  global_variable.py  handlers.py  main.py  sqlite_utils.py  utils.py
src/bbg_telegram_media_server/: bbg_telegram_media_server.py  config.py  db_utils.py  handlers.py  utils.py
