[tool.poetry]
name = "bbg-telegram-media-server"
version = "0.1.0"
description = "Telegram bot for downloading torrent files"
authors = ["NikitaDmitryuk <dmitryuk.nikita@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_single_line = true
order_by_type = false
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.poetry.dependencies]
python = "^3.11"
libtorrent = "^2.0.9"
python-telegram-bot = "^20.5"
nuitka = "^1.8.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
