[metadata]
license_files = README.md

[mypy]
disallow_untyped_defs = True
strict_optional = True

[mypy-elftools.*]
ignore_missing_imports = True

[mypy-cogapp.*]
ignore_missing_imports = True

[mypy-netifaces.*]
ignore_missing_imports = True

[isort]
multi_line_output = 3
include_trailing_comma = True
line_length = 120
force_grid_wrap = 0
combine_as_imports = True

[flake8]
max-line-length = 120
max-awaits = 10
max-local-variables = 10
max-module-members = 10
max-arguments = 10
ignore =
    # black handles whitespace before ':'.
    E203,
    # also handled by black.
    C8,
    # mako templates are used as messages, so no xss attacks.
    S702,
    # function calls in arguments definition is part of fastapi and botx di system.
    B008,
    # documentation is not required part
    D,
    # docstrings are not required in rst
    RST,
    # f-strings are useful
    WPS305,
    # required base in class definition is strange
    WPS306,
    # objects that are returned from fastapi and botx as di system parts should be available
    WPS404,
    # does not play well with forward type references
    WPS226,
no-accept-encodings = True
per-file-ignores = __init__.py: F401
inline-quotes = "
